[Fix] overflow scroll in sidebar

--- a/client/app/styles/index.styl
+++ b/client/app/styles/index.styl
@@ -22,7 +22,8 @@ aside
     background-color    $grey-01
     box-shadow: inset   -1px 0 0 0 $grey-01-alpha
     // to put back to cozy-ui
-    overflow            scroll
+    overflow            auto
+    overflow-x          hidden
 
     h4
         font-weight: normal
